# langchain-rag

./: .gitignore  README.md  ingestion.py  pyproject.toml  query.py  requirements.txt
